--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" href="css/sweetalert2.min.css"
 </head>
 
 <body>
@@ -157,18 +158,18 @@
                                         <div  class="flex-content">
                                             <p class="descriptor">Month</p>
                                             <select id="rep_month" class="form-control form-rounded">
-                                                <option value="1">January</option>
-                                                <option value="2">February</option>
-                                                <option value="3">March</option>
-                                                <option value="4">April</option>
-                                                <option value="5">May</option>
-                                                <option value="6">June</option>
-                                                <option value="7">July</option>
-                                                <option value="8">August</option>
-                                                <option value="9">September</option>
-                                                <option value="10">October</option>
-                                                <option value="11">November</option>
-                                                <option value="12">December</option>
+                                                <option value="1">ජනවාරි</option>
+                                                <option value="2">පෙබරවාරි</option>
+                                                <option value="3">මාර්තු</option>
+                                                <option value="4">අප්‍රේල්</option>
+                                                <option value="5">මැයි</option>
+                                                <option value="6">ජූනි</option>
+                                                <option value="7">ජූලි</option>
+                                                <option value="8">අගෝස්තු</option>
+                                                <option value="9">සැප්තැම්බර්</option>
+                                                <option value="10">ඔක්තෝම්බර්</option>
+                                                <option value="11">නොවැම්බර්</option>
+                                                <option value="12">දෙසැම්බර්</option>
                                             </select>
                                         </div>
                                         <div  class="flex-content"></div>
@@ -201,6 +202,79 @@
                                         <input id="repName" type="text" name="name" class="form-control form-rounded" placeholder="Name">
                                     </div>
                                 </div>
+                                <div class="section-container rep-full">
+                                    <div style="display: flex;">
+                                        <div style="flex: 2;font-size: 15px;">
+                                            සැපයූ තේ දළු ප්‍රමාණය:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;" id="repGross"></div>
+                                        <div style="flex: 2;font-size: 15px;">
+                                            කලින් මාසයේ හිඟ මුදල්:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;" id="repLoss"></div>
+                                    </div>
+                                    <div style="display: flex;">
+                                        <div style="flex: 2;font-size: 15px;">
+                                            අත්තිකාරම්:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;" id="repAdv"></div>
+                                        <div style="flex: 2;font-size: 15px;">
+                                            තේ කොළ:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;"  id="repTea"></div>
+                                    </div>
+                                    <div style="display: flex;">
+                                        <div style="flex: 2;font-size: 15px;">
+                                            පොහොර:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;" id="repFer"></div>
+                                        <div style="flex: 2;font-size: 15px;">
+                                            ඩොලමයිට්:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;"  id="repDol"></div>
+                                    </div>
+                                    <div style="display: flex;">
+                                        <div style="flex: 2;font-size: 15px;">
+                                            වෙනත්:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;" id="repOther"></div>
+                                        <div style="flex: 2;font-size: 15px;">
+                                            වල් නාශක:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;">
+                                            <div style="flex: 2;font-size: 15px;" id="repPoi"></div>
+                                        </div>
+                                    </div>
+                                    <div style="display: flex;">
+                                        <div style="flex: 2;font-size: 15px;">
+                                            Other Expenses:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;">
+                                            <input id="repOtherAdd" type="text" name="name" class="form-control form-rounded" placeholder="Other Expenses">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="section-container">
+                                    <div style="display: flex;">
+                                        <div style="flex: 2;font-size: 15px;">
+                                            මුළු අඩු කිරීම්:
+                                        </div>
+                                        <div style="flex: 2;font-size: 15px;" id="repDed"></div>
+                                        <div style="flex: 2;font-size: 15px;" id="repTotal"></div>
+                                        <div style="flex: 2;font-size: 15px;">
+                                            ගෙවීමට ඇති ඉතිරි/හිඟ මුදල:
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="section-container">
+                                    <div class="autocomplete" style="width:auto;display:flex">
+                                        <div  class="flex-content"></div>
+                                        <div  class="flex-content"><button class="btn btn-success" id="repGenerate"><i class="fas fa-check-circle">  generate</i></button></div>
+                                        <div  class="flex-content"><button class="btn btn-success" id="repGenerateAll"><i class="fas fa-check-circle">  generate all</i></button></div>
+                                        <div  class="flex-content"><button class="btn btn-success" id="repPrintAll"><i class="fas fa-check-circle">  print all</i></button></div>
+                                        <div  class="flex-content"></div>
+                                    </div>
+                                </div>
                             </section>
                         </div>
                         <div class="page" id="p5">
@@ -221,6 +295,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/blueimp-gallery.min.js"></script>
     <script src="js/operations.js"></script>
+    <script src="js/sweetalert2.all.min.js"></script>
     <script>
         // document.getElementById('links').onclick = function(event) {
         //     event = event || window.event
