--- a/views/report.hbs
+++ b/views/report.hbs
@@ -12,7 +12,7 @@
                 <p><u>1957 අංක 51 දරණ TC 18 දරණ ප්‍රකාශනය</u></p>
                 <hr>
                 <div>
-                <p>පහත නම සඳහන් මා විසින් {{month}} මාසයේ ඉහත නම සඳහන් අයට අමු තේ දළු කි.ග්‍රෑ. {{grossweight}} ක් මාගේ ඉඩමෙන් නෙලාගෙන බාර දී රුපියල් {{rupees}} ශත {{cents}} ක මුදලක් / හිඟ බිල්පත බාර ගතිමි.</p>
+                <p>පහත නම සඳහන් මා විසින් {{month_string}} මාසයේ ඉහත නම සඳහන් අයට අමු තේ දළු කි.ග්‍රෑ. {{grossweight}} ක් මාගේ ඉඩමෙන් නෙලාගෙන බාර දී රුපියල් {{rupees}} ශත {{cents}} ක මුදලක් / හිඟ බිල්පත බාර ගතිමි.</p>
                 <br>
                 <div class="basics">
                 <div style="display: flex;">
@@ -58,7 +58,6 @@
                         <p><strong>{{addi4}}</strong></p>
                         <p><strong>{{stamps}}</strong></p>
                         <p><strong>{{addi3}}</strong></p>
-                        <p><strong>{{addi5}}</strong></p>
                     </div>
                 </div>
                 <br>
