--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,16 @@ body,
     overflow: hidden;
 }
 
+th {
+    font-size: 15px;
+    width: 12.5%;
+}
+
+td {
+    font-size: 10px;
+    width: 12.5%;
+}
+
 * {
     font-family: 'open sans', 'lato', 'helvetica', sans-serif;
 }
@@ -358,4 +368,32 @@ table tr td {
 
 .rep-full p{
     font-size: 13px;
+}
+
+#tTable {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #tTable td, #tTable th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  #tTable tr:nth-child(even){background-color: #138dff;}
+  
+  #tTable tr:hover {background-color: rgb(51, 51, 51);}
+  
+  #tTable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+  }
+
+.tbl-container {
+    overflow: auto;
+    max-height: 400px;
 }
