--- a/views/report.hbs
+++ b/views/report.hbs
@@ -1,22 +1,22 @@
-<html>
+<html style="width:50%;">
     <head>
     <link rel="stylesheet" type="text/css" href="css/report.css">
     </head>
-    <body style="text-align: center;">
+    <body style="text-align: center;width:50%;">
         <div id="printSample" class="print-div">
                 <h2>දිදුල අමු තේ දළු ප්‍රවාහනය කරන්නෝ</h2>
                 <h3>ඩී.ඩබ්. අලංක නිලුපුල්</h3>
-                <p>(බලයලත් අමු තේ දළු වෙළඳ නියෝජිත)</p>
-                <p>B 73, පුංචි දොඩාවත්ත, නූරිය. දු.ක. 077 9055513</p>
+                <p class="top">(බලයලත් අමු තේ දළු වෙළඳ නියෝජිත)</p>
+                <p class="top">B 73, පුංචි දොඩාවත්ත, නූරිය. දු.ක. 077 9055513</p>
                 <p class="report-p">ලි.ප. අංකය R 4867</p>
-                <p><u>1957 අංක 51 දරණ TC 18 දරණ ප්‍රකාශනය</u></p>
+                <p class="top"><u>1957 අංක 51 දරණ TC 18 දරණ ප්‍රකාශනය</u></p>
                 <hr>
                 <div>
-                <p>පහත නම සඳහන් මා විසින් {{month_string}} මාසයේ ඉහත නම සඳහන් අයට අමු තේ දළු කි.ග්‍රෑ. {{grossweight}} ක් මාගේ ඉඩමෙන් නෙලාගෙන බාර දී රුපියල් {{rupees}} ශත {{cents}} ක මුදලක් / හිඟ බිල්පත බාර ගතිමි.</p>
+                <p class="description">පහත නම සඳහන් මා විසින් {{month_string}} මාසයේ ඉහත නම සඳහන් අයට අමු තේ දළු කි.ග්‍රෑ. {{grossweight}} ක් මාගේ ඉඩමෙන් නෙලාගෙන බාර දී රුපියල් {{rupees}} ශත {{cents}} ක මුදලක් / හිඟ බිල්පත බාර ගතිමි.</p>
                 <br>
                 <div class="basics">
-                <div style="display: flex;">
-                    <div style="flex: 2;">
+                <div class="summary-container">
+                    <div>
                         <p>නම  : </p>
                         <p>ලිපිනය  : </p>
                         <p>සාමාජික අංකය  : </p>
@@ -24,7 +24,7 @@
                         <p>කිලෝවක මිල : </p>
                         <p>මුළු මුදල : </p>
                     </div>
-                    <div style="flex: 3;">
+                    <div class="data-list">
                         <p><strong>{{name}}</strong></p>
                         <p><strong>{{address}}</strong></p>
                         <p><strong>{{uid}}</strong></p>
@@ -36,50 +36,69 @@
                 <hr>
                 <p><u>අඩු කිරීම්</u></p>
                 <br>
-                <div style="display: flex;">
-                    <div style="flex: 2;">
+                <div class="detail-container">
+                    <div>
                         <p>අත්තිකාරම්  : </p>
                         <p>ප්‍රවාහන ගාස්තු  : </p>
-                        <p>පොහොර  : </p>  
-                        <p>වෙනත්  : </p>
+                        <p>පොහොර  : </p>
+                        <p>ඩොලමයිට්  : </p> 
                     </div>
-                    <div style="flex: 2;">
+                    <div class="data-list">
                         <p><strong>{{addi0}}</strong></p>
                         <p><strong>{{transport}}</strong></p>
                         <p><strong>{{addi1}}</strong></p>
-                        <p><strong>{{addi5}}</strong></p>
+                        <p><strong>{{addi3}}</strong></p>
                     </div>
-                    <div style="flex: 2;">
+                    <div>
                         <p>තේ කොළ  : </p>
                         <p>මුද්දර ගාස්තු  : </p>
-                        <p>ඩොලමයිට්  : </p> 
+                        <p>වෙනත්  : </p>
                     </div>
-                    <div style="flex: 2;">
+                    <div class="data-list">
                         <p><strong>{{addi4}}</strong></p>
                         <p><strong>{{stamps}}</strong></p>
-                        <p><strong>{{addi3}}</strong></p>
+                        <p><strong>{{other_expense1}}</strong></p>
+                        <p><strong>{{other_expense2}}</strong></p>
                     </div>
                 </div>
                 <br>
-                <p>කලින් මාසයේ හිඟ මුදල් : </p>
+                <div style="display: flex;">
+                    <div style="flex: 4;">
+                        <p>කලින් මාසයේ හිඟ මුදල් : </p>
+                    </div>
+                    <div style="flex: 2;">
+                        <p><strong>{{total_debt}}</strong></p>
+                    </div>
+                    <div style="flex: 2;">
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
                 <hr>
                 <div style="display: flex;">
                     <div style="flex: 5;">
                         <p>මුළු අඩු කිරීම් : </p>
                     </div>
-                    <div style="flex: 5;">
-                        <p>{{total_deduct}}</p>
+                    <div style="flex: 3;" class="underline-drawer">
+                        <p><strong>{{total_deduct}}</strong></p>
+                    </div>
+                    <div style="flex: 2;">
+                        <p>&nbsp;</p>
                     </div>
                 </div>
                 <div style="display: flex;">
                     <div style="flex: 5;">
                         <p>ගෙවීමට ඇති ඉතිරි/හිඟ මුදල : </p>
                     </div>
-                    <div style="flex: 5;">
-                        <p>{{total_pay}}</p>
+                    <div style="flex: 3;" class="underline-drawer">
+                        <p><strong>{{total_pay}}</strong></p>
+                    </div>
+                    <div style="flex: 2;">
+                        <p>&nbsp;</p>
                     </div>
                 </div>
+                <br>
                 <p>ඉහත සඳහන් මුදල ලබාගත් බව සහතික කරමි</p>
+                <br>
                 <br>
                 <div style="display: flex;">
                     <div style="flex: 5;">
